# mtmEx4_0

./: .gitignore  CMakeLists.txt  Graph.i  commands.txt  cpp_to_c_header.h  gcalc  gcalc.cpp  gcalc.h  graph.cpp  graph.h  graph.i  graph.py  graph_wrap.c  graph_wrap.cxx  input  main_example.cpp  makefile  test_in.txt  test_out.txt  test_out_prompt.txt  text_out.txt
